# euleron

./: Cargo.toml  README.md  SOURCE_CODE_GUIDE.md  playground.html
.cargo/: config.toml
examples/: alma-rdf-messages.n3  collection.n3  log-not-includes.n3  minimal-skos-alignment.n3  rdf-message-cold-chain-recall.n3  rdf-message-flow.n3  rdf-message-ldes-incremental.n3  rdf-message-microgrid.n3  rdf-message-window-repair.n3  rdf-messages.n3
examples/deck/: rdf-message-cold-chain-recall.md  rdf-message-flow.md  rdf-message-ldes-incremental.md  rdf-message-window-repair.md
examples/input/: rdf-message-cold-chain-recall.trig  rdf-message-flow.trig  rdf-message-ldes-incremental.trig  rdf-message-microgrid.trig  rdf-message-window-repair.trig  rdf-messages.trig
examples/output/: deep-taxonomy-100000.n3  rdf-message-flow.md  rdf-message-ldes-incremental.md  rdf-message-microgrid.md  rdf-message-window-repair.md  rdf-messages.md
pkg/: euleron.js  euleron_bg.wasm  eyeron.d.ts  eyeron.js  eyeron_bg.wasm  eyeron_bg.wasm.d.ts  feye.js  feye_bg.wasm  package.json
reports/: README.md  w3c-rdf-earl.ttl
scripts/: sync-test-suites
src/: ast.rs  error.rs  incremental.rs  lexer.rs  lib.rs  main.rs  parser.rs  printing.rs  proof.rs  rdf_compat.rs  reasoner.rs  wasm.rs
tests/: cli_help.rs  cli_stream_messages.rs  examples.rs  incremental.rs  notation3_conformance.rs  playground.rs  regressions.rs  w3c_rdf.rs
tests/input/: alma-rdf-messages-small.nt
tests/notation3tests/tests/delayed/: success-delayed-1.n3  success-delayed-2.n3  success-delayed-3.n3  success-delayed-4.n3  success-delayed-5.n3  success-delayed-6.n3
tests/notation3tests/tests/static/: crash-fuse-1.n3  crash-fuse-2.n3  crash-fuse-3.n3  crash-syntax-1.n3  crash-syntax-10.n3  crash-syntax-11.n3  crash-syntax-12.n3  crash-syntax-2.n3  crash-syntax-3.n3  crash-syntax-4.n3  crash-syntax-5.n3  crash-syntax-6.n3  crash-syntax-7.n3  crash-syntax-8.n3  crash-syntax-9.n3  fail-literal-1.n3  fail-literalType-1.n3  fail-literalType-2.n3  fail-literalType-3.n3  fail-literalType-4.n3  fail-literalType-5.n3  fail-literalType-6.n3  fail-literalType-7.n3  success-literal-1.n3  success-literal-10.n3  success-literal-11.n3  success-literal-12.n3  success-literal-13.n3  success-literal-14.n3  success-literal-15.n3  success-literal-16.n3  success-literal-17.n3  success-literal-18.n3  success-literal-19.n3  success-literal-2.n3  success-literal-20.n3  success-literal-21.n3  success-literal-22.n3  success-literal-23.n3  (+28 more)
tests/support/: mod.rs
tests/w3c_rdf/: README.md  runner.rs
tests/w3c_rdf/rdf-tests/: README.md
tools/: build_playground.rs
(+56 files in other folders)
