[package]
name = "eyeron"
version = "0.3.0"
edition = "2021"
default-run = "eyeron"
authors = ["Jos De Roo"]
license = "MIT"
description = "A native Rust Notation3 reasoner."
repository = "https://github.com/eyereasoner/eyeron"

[lib]
name = "eyeron"
path = "src/lib.rs"

[[bin]]
name = "eyeron"
path = "src/main.rs"

[[test]]
name = "w3c_rdf"
path = "tests/w3c_rdf.rs"
harness = false

[dependencies]
ureq = "2"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
