[package]
name = "euleron"
version = "0.3.17"
edition = "2021"
default-run = "euleron"
authors = ["Jos De Roo"]
license = "MIT"
description = "A native Rust Notation3 reasoner."
repository = "https://github.com/eyereasoner/euleron"

[lib]
name = "euleron"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "euleron"
path = "src/main.rs"
test = false

[[bin]]
name = "euleron-playground-build"
path = "tools/build_playground.rs"
test = false

[[test]]
name = "w3c_rdf"
path = "tests/w3c_rdf.rs"
harness = false

[dependencies]
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
# Rust emits WebAssembly bulk-memory and nontrapping float-to-int instructions.
# Tell wasm-opt/Binaryen to accept those features during release optimization.
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
